--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -55,3 +55,13 @@ select {
     padding-right: env(safe-area-inset-right);
   }
 }
+
+/* Ocultar scrollbar en scroll horizontal (filtros mobile) */
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
